# cpp-utils

sorting/: sort-array.cpp  sort-bubble.cpp  temp.cpp
temp/: Ex.burrito-salesrecord2.cpp  Ex.classes.cpp  Ex.print-winner.cpp  maths.cpp
utest-catch2/: CMakeLists.txt  main.cpp
